syntax = "proto3";

enum UserStatus {
  USER_STATUS_ENROLL = 0;     // 待注册
  USER_STATUS_LOGIN = 1;      // 登录
  USER_STATUS_LOGOUT = 2;     // 登出
}

message AccountInfo {
  string user = 1;
  string password = 2;
  string code = 3;
  string token = 4;
  UserStatus status = 5;
}

